--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+/* src/styles/globals.css */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+@import 'swiper/swiper-bundle.css';
+
+
+
 
 @layer utilities {
   /* Chrome, Safari and Opera */
@@ -109,4 +116,30 @@
   .text-3xl-semi {
     @apply text-[32px] leading-[44px] font-semibold;
   }
+
+  /* src/styles/globals.css */
+.slider-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.slider-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* src/styles/swiper.css */
+.swiper-container {
+  width: 100%;
+  height: 400px;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 }
